Fixed dark mode mobile nav

--- a/packages/mitosis/src/site/SiteNav.css
+++ b/packages/mitosis/src/site/SiteNav.css
@@ -1,7 +1,6 @@
 .appshell .navbar.open {
   display: block !important;
   position: absolute !important;
-  background: var(--oc-white) !important;
   width: 100% !important;
   top: 0 !important;
   bottom: 0 !important;
