--- a/packages/styles/src/navbar.css
+++ b/packages/styles/src/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  background: var(--oc-white);
   border-right: 0.0625rem solid var(--oc-gray-2);
 }
 
